...
    "commandPalette.category.edit": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Edit"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "编辑"
...
    "menu.shell": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Shell"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "Shell"
...
    "command.clearScreen": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Clear Screen"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "清除屏幕"
...
    "command.reconnectRemote": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Reconnect to Host"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "重新连接到主机"
...
    "command.browseRemoteFiles": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Browse Remote Files…"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "浏览远程文件…"
...
    "menu.presets": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New Pane with Preset"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "使用预设新建窗格"
...
    "sftp.host.connect": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Connect"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "连接"
...
    "remoteEdit.changed.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Upload Changes?"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "要上传更改吗？"
...
    "remoteEdit.upload": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Upload"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "上传"
...
    "ui.common.more": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "More actions"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "更多操作"
...
